welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:21: error: ';' expected but 'for' found.
}for (i<- 0 to 9 ) {
 ^